force-app/main/default/objects/RC_college__c/RC_college__c.object-meta.xml
<CustomObject>
    <label>RC_college</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>