force-app/main/default/objects/RC_college__c/fields/affiliated_university__c.field-meta.xml
<CustomField>
    <fullName>affiliated_university__c</fullName>
    <inlineHelpText>Leave Blank if none</inlineHelpText>
    <label>Affiliated University</label>
    <length>80</length>
    <type>Text</type>
</CustomField>