force-app/main/default/objects/RC_college__c/fields/college_address__c.field-meta.xml
<CustomField>
    <fullName>college_address__c</fullName>
    <label>College Address</label>
    <type>TextArea</type>
</CustomField>