force-app/main/default/objects/RC_college__c/fields/college_code__c.field-meta.xml
<CustomField>
    <fullName>college_code__c</fullName>
    <label>College Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>