force-app/main/default/objects/RC_college__c/fields/college_pincode__c.field-meta.xml
<CustomField>
    <fullName>college_pincode__c</fullName>
    <label>College Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>