force-app/main/default/objects/RC_college__c/fields/college_tpo_email__c.field-meta.xml
<CustomField>
    <fullName>college_tpo_email__c</fullName>
    <label>College/TPO Email</label>
    <type>Email</type>
</CustomField>