force-app/main/default/objects/RC_college__c/fields/college_tpo_phone__c.field-meta.xml
<CustomField>
    <fullName>college_tpo_phone__c</fullName>
    <label>College/TPO Phone</label>
    <type>Phone</type>
</CustomField>