force-app/main/default/objects/RC_college__c/fields/student_count__c.field-meta.xml
<CustomField>
    <fullName>student_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>student count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>