force-app/main/default/objects/RC_college__c/fields/tpo_name__c.field-meta.xml
<CustomField>
    <fullName>tpo_name__c</fullName>
    <label>Training Placement Officer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>