force-app/main/default/objects/RC_college__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>affiliated_university__c</columns>
    <columns>college_address__c</columns>
    <columns>college_code__c</columns>
    <columns>college_pincode__c</columns>
    <columns>college_tpo_email__c</columns>
    <columns>college_tpo_phone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>